# radx-data-dictionary-specification

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENERALIZATION_PLAN.md  LICENSE  README.md  SECURITY.md  radx-data-dictionary-specification.md  ruff.toml  specification-csv.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/: API_PLAN.md  COOKBOOK.md  README.md  pyproject.toml
api/dd_api/: __init__.py  cli.py  dd-json.schema.json  model.py
api/tests/: test_cli.py  test_model.py
converter/: API_PLAN.md  README.md  pyproject.toml
converter/dd_converter/: __init__.py  cli.py  datatypes.py  emit.py  missing_values.py  model.py  reader.py  reverse.py  terms_lookup.py  units.py
converter/dd_converter/grammar/: __init__.py  enumeration.lark  parse.py  precondition.lark  precondition.py
converter/examples/: dht.html  dht.yaml  gcb.dd.csv  gcb.html  gcb.yaml  rad.dd.csv  rad.html  rad.yaml  tech.html  tech.yaml  up.dd.csv  up.html  up.redcap.csv  up.yaml
converter/radx_dd_converter/: __init__.py  cli.py  datatypes.py  emit.py  missing_values.py  reader.py  reverse.py  terms_lookup.py  units.py
converter/radx_dd_converter/grammar/: enumeration.lark  parse.py  terms.py
converter/tests/: test_cli.py  test_datatypes.py  test_emit.py  test_model.py  test_parse.py  test_precondition.py  test_reader.py  test_reverse.py  test_tables.py  test_terms.py  test_terms_lookup.py
converter/tests/fixtures/: sample.csv
core/: README.md  pyproject.toml
core/dd_core/: __init__.py  missing_values.py  naming.py  reader.py  ucum.py  units.py
core/dd_core/grammar/: __init__.py  parse.py  terms.py
core/tests/: test_datatypes.py  test_parse.py  test_precondition.py  test_reader.py  test_tables.py  test_terms.py  test_ucum.py
examples/: README.md  dht.dd.csv  dht.html  tech.dd.csv  tech.yaml
linkml/: CONVERTER_PLAN.md  README.md  data-dictionary-csv.yaml  data-dictionary.yaml  pyproject.toml
linkml/dd_linkml/: __init__.py  cli.py  emit.py  reverse.py
linkml/examples/: rad.redcap.csv  up.dd.csv  up.yaml
linkml/tests/: test_cli.py  test_emit.py  test_precondition_linkml.py  test_reverse.py  test_terms_lookup.py
printer/: PRINTER_PLAN.md  README.md  pyproject.toml
printer/dd_printer/: __init__.py  cli.py  load.py  markdown.py  model.py  precondition.py  render_html.py  render_json.py
printer/dd_printer/static/: dictionary.css
printer/dd_printer/templates/: dictionary.html.j2
printer/tests/: test_printer.py
redcap/: CONVERSION.md  README.md  REDCAP_PLAN.md  pyproject.toml
redcap/dd_redcap/: __init__.py  branching.py  choices.py  cli.py  convert.py  datatypes.py  headers.py
redcap/tests/: test_choices.py  test_convert.py  test_datatypes_and_cli.py
scripts/: bump_version.py
validator/: README.md  VALIDATOR_PLAN.md  pyproject.toml
validator/dd_validator/: __init__.py  checks.py  cli.py  model.py  report.py  rows.py  validate.py
validator/tests/: test_advisory_checks.py  test_checks.py  test_cli.py  test_report.py  test_validate.py
