[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-api"
version = "0.0.2"
description = "A high-level Python API for working with data dictionaries"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
dependencies = [
    # The reading and cell-grammar parsing come from dd_core; the LinkML
    # conversion from dd_linkml. Neither is on PyPI, so depend on them directly
    # from this repository; installing dd-api pulls both in one step.
    "dd-core @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.2#subdirectory=core",
    "dd-linkml @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.2#subdirectory=linkml",
    "pyyaml",  # from_linkml reads schema YAML
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[project.scripts]
dd-json = "dd_api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_api*"]

[tool.pytest.ini_options]
# Docstring examples are executable: --doctest-modules runs every `>>>`
# example in dd_api as a test, so the documentation cannot drift.
testpaths = ["tests", "dd_api"]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
