[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-printer"
version = "0.0.1"
description = "Render a data dictionary to human-readable HTML or JSON"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
dependencies = [
    "jinja2>=3",
    "markdown-it-py[linkify]>=3",
    # The data-dictionary reader/loader is reused from the sibling converter.
    # It is not on PyPI, so depend on it directly from this repository; this
    # lets `pip/pipx install <printer>` pull the converter in one step.
    "radx-dd-converter @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git#subdirectory=converter",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
dd-print = "dd_printer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_printer*"]

[tool.setuptools.package-data]
dd_printer = ["templates/*.j2", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
