[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-printer"
version = "0.0.4"
description = "Render a data dictionary to human-readable HTML or JSON"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
dependencies = [
    "jinja2>=3",
    "markdown-it-py[linkify]>=3",
    # Dictionaries are loaded through the sibling high-level API package.
    # It is not on PyPI, so depend on it directly from this repository; this
    # lets `pip/pipx install <printer>` pull it (and the converter it wraps)
    # in one step.
    "dd-api @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.4#subdirectory=api",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
dd-print = "dd_printer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_printer*"]

[tool.setuptools.package-data]
dd_printer = ["templates/*.j2", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
