[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-validate"
version = "0.0.8"
description = "Validate a data dictionary CSV against the specification and report violations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
dependencies = [
    # The data-dictionary reader and per-cell parsers (datatype resolution,
    # enumeration / missing-value-codes grammars) are reused from the sibling
    # converter. It is not on PyPI, so depend on it directly from this
    # repository; this lets `pip/pipx install <validator>` pull it in one step.
    "dd-core @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.8#subdirectory=core",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
dd-validate = "dd_validator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_validator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
